Fixed photo spacing and foot position

--- a/web/project/style.css
+++ b/web/project/style.css
@@ -96,10 +96,15 @@ span {
 
 .photo-main-container {
   display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .photo-main-container a {
+  margin: 0 5px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #gallery {
